First commit for block 9

--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@ Email : mactup6@gmail.com
 <body>
     <div id="divWrapper">
 		<div id="divHeader">
-			<img src="Images/MyWebsite.png" width="350" height="80" alt="Logo" title="MyWebsite"/>
+			<img src="images/MyWebsite.png" width="350" height="80" alt="Logo" title="MyWebsite"/>
 		</div><!--end of header-->
 		<div id="divLine1"></div><!--end of line1-->
 		<div id="divLinks">
