--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ Email : mactup6@gmail.com
 <body>
 	<div id="divWrapper">
 		<div id="divHeader">
-			<img src="Images/MyWebsite.png" width="350" height="80" alt="Logo" title="MyWebsite"/>
+			<img src="images/MyWebsite.png" width="350" height="80" alt="Logo" title="MyWebsite"/>
 		</div><!--end of header-->
 		<div id="divLine1"></div><!--end of line1-->
 		<div id="divLinks">
@@ -43,7 +43,7 @@ Email : mactup6@gmail.com
 		<div id="divLine2"></div><!--end of line2-->
 		<div id="divAbout">
 			<div id="divContent">
-				<img id="logo3" src="Images/Star3.jpeg" width="90" height="123" alt="contact" />
+				<img id="logo3" src="images/Star3.jpeg" width="90" height="123" alt="contact" />
 				<h5> Contact Press 'f' to change logo</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
