Second commit for block 9

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@ Email : mactup6@gmail.com
     <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="divWrapper">
-		<div id="divHeader">
-			<img src="images/MyWebsite.png" width="350" height="80" alt="Logo" title="MyWebsite"/>
-		</div><!--end of header-->
+<div id="Wrapper">
+		<header>
+			<h1 id="Logo">My Website</h1>
+		</header><!--end of header-->
 		<div id="divLine1"></div><!--end of line1-->
 		<div id="divLinks">
 			<div class="menu">
                 <!-- Menu icon -->
                 <div class="icon-close">
-                    <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
+                    <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png" alt="close">
                 </div>
                 <!-- Menu -->
 				<ul>
@@ -36,7 +36,7 @@ Email : mactup6@gmail.com
               </div><!--end of menu-->
             <div class="menu1">
                 <div class="icon-menu">
-                    Menu
+                    <img id="menu-icon" src="images/menu-icon.png" alt="menu-icon">
                 </div>
             </div>
 		</div><!--end of links-->
