--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@ Email : mactup6@gmail.com
 -->
 <html lang="en">
 <head>
-    <title>Resume</title>
+    <title>Interactive Website using JS</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="JS, Website, Interactive">
@@ -17,15 +17,15 @@ Email : mactup6@gmail.com
 </head>
 <body>
     <div id="divWrapper">
-		<div id="divHeader">
-			<img src="images/MyWebsite.png" width="350" height="80" alt="Logo" title="MyWebsite"/>
-		</div><!--end of header-->
+		<header>
+			<h1 id="Logo">My Website</h1>
+		</header><!--end of header-->
 		<div id="divLine1"></div><!--end of line1-->
 		<div id="divLinks">
 						<div class="menu">
                 <!-- Menu icon -->
                 <div class="icon-close">
-                    <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
+                    <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png" alt="close">
                 </div>
                 <!-- Menu -->
 				<ul>
@@ -37,15 +37,15 @@ Email : mactup6@gmail.com
               </div><!--end of menu-->
             <div class="menu1">
                 <div class="icon-menu">
-                    Menu
+                  <img id="menu-icon" src="images/menu-icon.png">
                 </div>
             </div>
 		</div><!--end of links-->
 		<div id="divLine2"></div><!--end of line2-->
 		<div id="divAbout">
 			<div id="divContent">
-				<img id="logo1" src="images/Star1.jpeg" width="90" height="123" alt="resume" />
-				<h5> Resume Press 'z' to change logo</h5>
+				<img id="logo" src="images/Star1.jpeg" width="90" height="123" alt="resume" />
+				<h5> Resume Press 'enter' to change logo</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 		</div>
