--- a/resume.html
+++ b/resume.html
@@ -14,11 +14,12 @@ Email : mactup6@gmail.com
     <link type="text/css" rel="stylesheet" href="css/main.css">
     <link type="text/css" rel="stylesheet" href="css/normalize.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
+    <link type="text/css" rel="stylesheet" href="css/about.css">
 </head>
 <body>
-    <div id="divWrapper">
+    <div id="wrapper">
 		<header>
-			<h1 id="Logo">My Website</h1>
+			<h1 id="logo1">My Website</h1>
 		</header><!--end of header-->
 		<div id="divLine1"></div><!--end of line1-->
 		<div id="divLinks">
@@ -41,15 +42,15 @@ Email : mactup6@gmail.com
                 </div>
             </div>
 		</div><!--end of links-->
-		<div id="divLine2"></div><!--end of line2-->
-		<div id="divAbout">
-			<div id="divContent">
-				<img id="logo" src="images/Star1.jpeg" width="90" height="123" alt="resume" />
+		<div id="line2"></div><!--end of line2-->
+		<div id="about">
+			<div id="content">
+				<img id="logo2" src="images/Star1.jpeg" width="90" height="123" alt="resume" />
 				<h5> Resume Press 'enter' to change logo</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</div>
 		</div>
-		<div id="divFooter"></div>
+		<div id="footer"></div>
 	</div><!--end of wrapper-->
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/app.js"></script>
